[package]
name = "chortke"
version = "0.1.0"
edition = "2021"

[dependencies]
slab = "0.4.11"
thiserror = "2.0.16"
time = { version = "0.3", features = ["macros"] }
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
