[package]
name = "chortke"
version = "0.1.0"
edition = "2024"

[dependencies]
slab = "0.4.11"
thiserror = "2.0.16"
time = { version = "0.3", features = ["macros"] }
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "util", "cors"] }
http = "1.3.1"
uuid = { version = "1", features = ["v4"] }
axum-metrics = "0.2.0"
metrics-exporter-prometheus = "0.17.2"
tokio-util = "0.7.15"
serde_json = "1.0.145"
axum-valid = { version = "0.24.0", default-features = false, features = ["validify", "basic"] }
validify = "2.0.0"
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

